--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ project.lock.json
 *.user
 *.userosscache
 *.sln.docstates
+*.db
 
 # Build results
 [Dd]ebug/
@@ -26,6 +27,7 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+appsettings.json
 msbuild.log
 msbuild.err
 msbuild.wrn
